--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -1493,164 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Purchase ID</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Item Name</th>\n",
-       "      <th>Item ID</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3.53</td>\n",
-       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
-       "      <td>108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.56</td>\n",
-       "      <td>Frenzied Scimitar</td>\n",
-       "      <td>143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>4.88</td>\n",
-       "      <td>Final Critic</td>\n",
-       "      <td>92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3.27</td>\n",
-       "      <td>Blindscythe</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1.44</td>\n",
-       "      <td>Fury</td>\n",
-       "      <td>131</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>775</th>\n",
-       "      <td>775</td>\n",
-       "      <td>3.54</td>\n",
-       "      <td>Wolf</td>\n",
-       "      <td>60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>776</th>\n",
-       "      <td>776</td>\n",
-       "      <td>1.63</td>\n",
-       "      <td>Exiled Doomblade</td>\n",
-       "      <td>164</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>777</th>\n",
-       "      <td>777</td>\n",
-       "      <td>3.46</td>\n",
-       "      <td>Celeste, Incarnation of the Corrupted</td>\n",
-       "      <td>67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>778</th>\n",
-       "      <td>778</td>\n",
-       "      <td>4.19</td>\n",
-       "      <td>Final Critic</td>\n",
-       "      <td>92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>779</th>\n",
-       "      <td>779</td>\n",
-       "      <td>4.60</td>\n",
-       "      <td>Dawn</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>780 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Purchase ID  Price                                  Item Name  Item ID\n",
-       "0              0   3.53  Extraction, Quickblade Of Trembling Hands      108\n",
-       "1              1   1.56                          Frenzied Scimitar      143\n",
-       "2              2   4.88                               Final Critic       92\n",
-       "3              3   3.27                                Blindscythe      100\n",
-       "4              4   1.44                                       Fury      131\n",
-       "..           ...    ...                                        ...      ...\n",
-       "775          775   3.54                                       Wolf       60\n",
-       "776          776   1.63                           Exiled Doomblade      164\n",
-       "777          777   3.46      Celeste, Incarnation of the Corrupted       67\n",
-       "778          778   4.19                               Final Critic       92\n",
-       "779          779   4.60                                       Dawn       50\n",
-       "\n",
-       "[780 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 420,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_df = purchase_data_df[[\"Purchase ID\", \"Price\", \"Item Name\", \"Item ID\"]]\n",
-    "\n",
-    "\n",
-    "\n",
-    "purch_per_item = new_df.groupby(\"Item ID\")[\"Purchase ID\"].count()\n",
-    "\n",
-    "\n",
-    "\n",
-    "#2. Average price of item \n",
-    "avg_per_item = new_df.groupby(\"Item ID\")[\"Price\"].mean()\n",
-    "\n",
-    "\n",
-    "\n",
-    "#3. Total dollar amount of items\n",
-    "total_per_item = new_df.groupby(\"Item ID\")[\"Price\"].sum()\n",
-    "\n",
-    "new_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [
     {
@@ -1679,40 +1522,47 @@
        "      <th>Average Purchase Price</th>\n",
        "      <th>Total Purchase Value</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Item ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>92</th>\n",
-       "      <td>Betrayal, Whisper of Grieving Widows</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>(92, [Final Critic, Final Critic, Final Critic...</td>\n",
+       "      <td>13</td>\n",
        "      <td>4.614615</td>\n",
        "      <td>59.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>178</th>\n",
-       "      <td>Despair, Favor of Due Diligence</td>\n",
-       "      <td>12.0</td>\n",
+       "      <td>(178, [Oathbreaker, Last Hope of the Breaking ...</td>\n",
+       "      <td>12</td>\n",
        "      <td>4.230000</td>\n",
        "      <td>50.76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>145</th>\n",
-       "      <td>Hopeless Ebon Dualblade</td>\n",
-       "      <td>9.0</td>\n",
+       "      <td>(145, [Fiery Glass Crusader, Fiery Glass Crusa...</td>\n",
+       "      <td>9</td>\n",
        "      <td>4.580000</td>\n",
        "      <td>41.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>132</th>\n",
-       "      <td>Fiery Glass Crusader</td>\n",
-       "      <td>9.0</td>\n",
+       "      <td>(132, [Persuasion, Persuasion, Persuasion, Per...</td>\n",
+       "      <td>9</td>\n",
        "      <td>3.221111</td>\n",
        "      <td>28.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>108</th>\n",
-       "      <td>Malificent Bag</td>\n",
-       "      <td>9.0</td>\n",
+       "      <td>(108, [Extraction, Quickblade Of Trembling Han...</td>\n",
+       "      <td>9</td>\n",
        "      <td>3.530000</td>\n",
        "      <td>31.77</td>\n",
        "    </tr>\n",
@@ -1721,22 +1571,24 @@
        "</div>"
       ],
       "text/plain": [
-       "                                Item Name  Purchase Count  \\\n",
-       "92   Betrayal, Whisper of Grieving Widows            13.0   \n",
-       "178       Despair, Favor of Due Diligence            12.0   \n",
-       "145               Hopeless Ebon Dualblade             9.0   \n",
-       "132                  Fiery Glass Crusader             9.0   \n",
-       "108                        Malificent Bag             9.0   \n",
+       "                                                 Item Name  Purchase Count  \\\n",
+       "Item ID                                                                      \n",
+       "92       (92, [Final Critic, Final Critic, Final Critic...              13   \n",
+       "178      (178, [Oathbreaker, Last Hope of the Breaking ...              12   \n",
+       "145      (145, [Fiery Glass Crusader, Fiery Glass Crusa...               9   \n",
+       "132      (132, [Persuasion, Persuasion, Persuasion, Per...               9   \n",
+       "108      (108, [Extraction, Quickblade Of Trembling Han...               9   \n",
        "\n",
-       "     Average Purchase Price  Total Purchase Value  \n",
-       "92                 4.614615                 59.99  \n",
-       "178                4.230000                 50.76  \n",
-       "145                4.580000                 41.22  \n",
-       "132                3.221111                 28.99  \n",
-       "108                3.530000                 31.77  "
+       "         Average Purchase Price  Total Purchase Value  \n",
+       "Item ID                                                \n",
+       "92                     4.614615                 59.99  \n",
+       "178                    4.230000                 50.76  \n",
+       "145                    4.580000                 41.22  \n",
+       "132                    3.221111                 28.99  \n",
+       "108                    3.530000                 31.77  "
       ]
      },
-     "execution_count": 442,
+     "execution_count": 448,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1780,7 +1632,7 @@
     "#item_name = new_df[\"Item Name\"]\n",
     "\n",
     "#5.\n",
-    "item_name = new_df[\"Item Name\"]\n",
+    "item_name = new_df.groupby(\"Item ID\")[\"Item Name\"]\n",
     "\n",
     "\n",
     "\n",
@@ -1820,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 449,
    "metadata": {
     "scrolled": true
    },
@@ -1846,6 +1698,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Item Name</th>\n",
        "      <th>Purchase Count</th>\n",
        "      <th>Average Purchase Price</th>\n",
        "      <th>Total Purchase Value</th>\n",
@@ -1855,35 +1708,41 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>92</th>\n",
+       "      <td>(92, [Final Critic, Final Critic, Final Critic...</td>\n",
        "      <td>13</td>\n",
        "      <td>4.614615</td>\n",
        "      <td>59.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>178</th>\n",
+       "      <td>(178, [Oathbreaker, Last Hope of the Breaking ...</td>\n",
        "      <td>12</td>\n",
        "      <td>4.230000</td>\n",
        "      <td>50.76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>82</th>\n",
+       "      <td>(82, [Nirvana, Nirvana, Nirvana, Nirvana, Nirv...</td>\n",
        "      <td>9</td>\n",
        "      <td>4.900000</td>\n",
        "      <td>44.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>145</th>\n",
+       "      <td>(145, [Fiery Glass Crusader, Fiery Glass Crusa...</td>\n",
        "      <td>9</td>\n",
        "      <td>4.580000</td>\n",
        "      <td>41.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>103</th>\n",
+       "      <td>(103, [Singed Scalpel, Singed Scalpel, Singed ...</td>\n",
        "      <td>8</td>\n",
        "      <td>4.350000</td>\n",
        "      <td>34.80</td>\n",
@@ -1893,16 +1752,24 @@
        "</div>"
       ],
       "text/plain": [
-       "         Purchase Count  Average Purchase Price  Total Purchase Value\n",
-       "Item ID                                                              \n",
-       "92                   13                4.614615                 59.99\n",
-       "178                  12                4.230000                 50.76\n",
-       "82                    9                4.900000                 44.10\n",
-       "145                   9                4.580000                 41.22\n",
-       "103                   8                4.350000                 34.80"
+       "                                                 Item Name  Purchase Count  \\\n",
+       "Item ID                                                                      \n",
+       "92       (92, [Final Critic, Final Critic, Final Critic...              13   \n",
+       "178      (178, [Oathbreaker, Last Hope of the Breaking ...              12   \n",
+       "82       (82, [Nirvana, Nirvana, Nirvana, Nirvana, Nirv...               9   \n",
+       "145      (145, [Fiery Glass Crusader, Fiery Glass Crusa...               9   \n",
+       "103      (103, [Singed Scalpel, Singed Scalpel, Singed ...               8   \n",
+       "\n",
+       "         Average Purchase Price  Total Purchase Value  \n",
+       "Item ID                                                \n",
+       "92                     4.614615                 59.99  \n",
+       "178                    4.230000                 50.76  \n",
+       "82                     4.900000                 44.10  \n",
+       "145                    4.580000                 41.22  \n",
+       "103                    4.350000                 34.80  "
       ]
      },
-     "execution_count": 383,
+     "execution_count": 449,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1947,11 +1814,12 @@
     "\n",
     "\n",
     "# Create a summary dataframe with multiple column containing the results from the previous calculation\n",
-    "sn_summary = pd.DataFrame({\"Purchase Count\":purch_per_item, \"Average Purchase Price\":avg_per_item, \"Total Purchase Value\": total_per_item})\n",
+    "sn_summary2 = pd.DataFrame({\"Item Name\":item_name, \"Purchase Count\":purch_per_item, \"Average Purchase Price\":avg_per_item, \"Total Purchase Value\": total_per_item})\n",
     "\n",
-    "sn_summary.head()\n",
+    "sn_summary2.head()\n",
     "\n",
-    "sort = sn_summary.sort_values(\"Total Purchase Value\", ascending=False)\n",
+    "\n",
+    "sort = sn_summary2.sort_values(\"Total Purchase Value\", ascending=False)\n",
     "sort.head(5)\n",
     "\n"
    ]
