--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,190 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 450,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Purchase ID</th>\n",
-       "      <th>SN</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Item ID</th>\n",
-       "      <th>Item Name</th>\n",
-       "      <th>Price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Lisim78</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>108</td>\n",
-       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
-       "      <td>3.53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Lisovynya38</td>\n",
-       "      <td>40</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>143</td>\n",
-       "      <td>Frenzied Scimitar</td>\n",
-       "      <td>1.56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Ithergue48</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>92</td>\n",
-       "      <td>Final Critic</td>\n",
-       "      <td>4.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Chamassasya86</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>100</td>\n",
-       "      <td>Blindscythe</td>\n",
-       "      <td>3.27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Iskosia90</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>131</td>\n",
-       "      <td>Fury</td>\n",
-       "      <td>1.44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>775</th>\n",
-       "      <td>775</td>\n",
-       "      <td>Aethedru70</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>60</td>\n",
-       "      <td>Wolf</td>\n",
-       "      <td>3.54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>776</th>\n",
-       "      <td>776</td>\n",
-       "      <td>Iral74</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>164</td>\n",
-       "      <td>Exiled Doomblade</td>\n",
-       "      <td>1.63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>777</th>\n",
-       "      <td>777</td>\n",
-       "      <td>Yathecal72</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>67</td>\n",
-       "      <td>Celeste, Incarnation of the Corrupted</td>\n",
-       "      <td>3.46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>778</th>\n",
-       "      <td>778</td>\n",
-       "      <td>Sisur91</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>92</td>\n",
-       "      <td>Final Critic</td>\n",
-       "      <td>4.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>779</th>\n",
-       "      <td>779</td>\n",
-       "      <td>Ennrian78</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>50</td>\n",
-       "      <td>Dawn</td>\n",
-       "      <td>4.60</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>780 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Purchase ID             SN  Age  Gender  Item ID  \\\n",
-       "0              0        Lisim78   20    Male      108   \n",
-       "1              1    Lisovynya38   40    Male      143   \n",
-       "2              2     Ithergue48   24    Male       92   \n",
-       "3              3  Chamassasya86   24    Male      100   \n",
-       "4              4      Iskosia90   23    Male      131   \n",
-       "..           ...            ...  ...     ...      ...   \n",
-       "775          775     Aethedru70   21  Female       60   \n",
-       "776          776         Iral74   21    Male      164   \n",
-       "777          777     Yathecal72   20    Male       67   \n",
-       "778          778        Sisur91    7    Male       92   \n",
-       "779          779      Ennrian78   24    Male       50   \n",
-       "\n",
-       "                                     Item Name  Price  \n",
-       "0    Extraction, Quickblade Of Trembling Hands   3.53  \n",
-       "1                            Frenzied Scimitar   1.56  \n",
-       "2                                 Final Critic   4.88  \n",
-       "3                                  Blindscythe   3.27  \n",
-       "4                                         Fury   1.44  \n",
-       "..                                         ...    ...  \n",
-       "775                                       Wolf   3.54  \n",
-       "776                           Exiled Doomblade   1.63  \n",
-       "777      Celeste, Incarnation of the Corrupted   3.46  \n",
-       "778                               Final Critic   4.19  \n",
-       "779                                       Dawn   4.60  \n",
-       "\n",
-       "[780 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 406,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dependencies and Setup\n",
     "import pandas as pd\n",
@@ -205,229 +24,7 @@
     "purchase_data = pd.read_csv(file_to_load)\n",
     "\n",
     "\n",
-    "purchase_data_df = purchase_data\n",
-    "\n",
-    "purchase_data_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 408,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>Purchase ID</th>\n",
-       "      <th>SN</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Price</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Item ID</th>\n",
-       "      <th>Item Name</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <th>Extraction, Quickblade Of Trembling Hands</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Lisim78</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>3.53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>143</th>\n",
-       "      <th>Frenzied Scimitar</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Lisovynya38</td>\n",
-       "      <td>40</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>1.56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <th>Final Critic</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Ithergue48</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>4.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <th>Blindscythe</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Chamassasya86</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>3.27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <th>Fury</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Iskosia90</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>1.44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <th>Wolf</th>\n",
-       "      <td>775</td>\n",
-       "      <td>775</td>\n",
-       "      <td>Aethedru70</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>3.54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>164</th>\n",
-       "      <th>Exiled Doomblade</th>\n",
-       "      <td>776</td>\n",
-       "      <td>776</td>\n",
-       "      <td>Iral74</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>1.63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <th>Celeste, Incarnation of the Corrupted</th>\n",
-       "      <td>777</td>\n",
-       "      <td>777</td>\n",
-       "      <td>Yathecal72</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>3.46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <th>Final Critic</th>\n",
-       "      <td>778</td>\n",
-       "      <td>778</td>\n",
-       "      <td>Sisur91</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>4.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <th>Dawn</th>\n",
-       "      <td>779</td>\n",
-       "      <td>779</td>\n",
-       "      <td>Ennrian78</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>4.60</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>780 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   index  Purchase ID  \\\n",
-       "Item ID Item Name                                                       \n",
-       "108     Extraction, Quickblade Of Trembling Hands      0            0   \n",
-       "143     Frenzied Scimitar                              1            1   \n",
-       "92      Final Critic                                   2            2   \n",
-       "100     Blindscythe                                    3            3   \n",
-       "131     Fury                                           4            4   \n",
-       "...                                                  ...          ...   \n",
-       "60      Wolf                                         775          775   \n",
-       "164     Exiled Doomblade                             776          776   \n",
-       "67      Celeste, Incarnation of the Corrupted        777          777   \n",
-       "92      Final Critic                                 778          778   \n",
-       "50      Dawn                                         779          779   \n",
-       "\n",
-       "                                                              SN  Age  Gender  \\\n",
-       "Item ID Item Name                                                               \n",
-       "108     Extraction, Quickblade Of Trembling Hands        Lisim78   20    Male   \n",
-       "143     Frenzied Scimitar                            Lisovynya38   40    Male   \n",
-       "92      Final Critic                                  Ithergue48   24    Male   \n",
-       "100     Blindscythe                                Chamassasya86   24    Male   \n",
-       "131     Fury                                           Iskosia90   23    Male   \n",
-       "...                                                          ...  ...     ...   \n",
-       "60      Wolf                                          Aethedru70   21  Female   \n",
-       "164     Exiled Doomblade                                  Iral74   21    Male   \n",
-       "67      Celeste, Incarnation of the Corrupted         Yathecal72   20    Male   \n",
-       "92      Final Critic                                     Sisur91    7    Male   \n",
-       "50      Dawn                                           Ennrian78   24    Male   \n",
-       "\n",
-       "                                                   Price  \n",
-       "Item ID Item Name                                         \n",
-       "108     Extraction, Quickblade Of Trembling Hands   3.53  \n",
-       "143     Frenzied Scimitar                           1.56  \n",
-       "92      Final Critic                                4.88  \n",
-       "100     Blindscythe                                 3.27  \n",
-       "131     Fury                                        1.44  \n",
-       "...                                                  ...  \n",
-       "60      Wolf                                        3.54  \n",
-       "164     Exiled Doomblade                            1.63  \n",
-       "67      Celeste, Incarnation of the Corrupted       3.46  \n",
-       "92      Final Critic                                4.19  \n",
-       "50      Dawn                                        4.60  \n",
-       "\n",
-       "[780 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 408,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "test2 = purchase_data_df.reset_index()\n",
-    "\n",
-    "test3 = test2.set_index([\"Item ID\", \"Item Name\"])\n",
-    "test3"
+    "purchase_data_df = purchase_data\n"
    ]
   },
   {
@@ -527,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [
     {
@@ -574,27 +171,12 @@
        "0                780.0        2379.77       3.050987                     179"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 451,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "#Run basic calculations \n",
-    "summary = purchase_data_df.describe()\n",
-    "\n",
-    "#Locate average price\n",
-    "mean_price = summary.loc[\"mean\", \"Price\"]\n",
-    "\n",
-    "\n",
-    "\n",
-    "#Obtain number of unique items\n",
-    "unique = purchase_data_df[\"Item ID\"].unique()\n",
-    "num_uni_items = len(unique)\n",
-    "\n",
-    "\n",
     "\n",
     "#Run basic calculations \n",
     "summary = purchase_data_df.describe()\n",
