--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 454,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1101,7 @@
        "      <th></th>\n",
        "      <th>Item Name</th>\n",
        "      <th>Purchase Count</th>\n",
-       "      <th>Average Purchase Price</th>\n",
+       "      <th>Item Price</th>\n",
        "      <th>Total Purchase Value</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1161,16 +1161,16 @@
        "132      (132, [Persuasion, Persuasion, Persuasion, Per...               9   \n",
        "108      (108, [Extraction, Quickblade Of Trembling Han...               9   \n",
        "\n",
-       "         Average Purchase Price  Total Purchase Value  \n",
-       "Item ID                                                \n",
-       "92                     4.614615                 59.99  \n",
-       "178                    4.230000                 50.76  \n",
-       "145                    4.580000                 41.22  \n",
-       "132                    3.221111                 28.99  \n",
-       "108                    3.530000                 31.77  "
+       "         Item Price  Total Purchase Value  \n",
+       "Item ID                                    \n",
+       "92         4.614615                 59.99  \n",
+       "178        4.230000                 50.76  \n",
+       "145        4.580000                 41.22  \n",
+       "132        3.221111                 28.99  \n",
+       "108        3.530000                 31.77  "
       ]
      },
-     "execution_count": 448,
+     "execution_count": 454,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1219,7 @@
     "\n",
     "\n",
     "# Create a summary dataframe with multiple column containing the results from the previous calculation\n",
-    "sn_summary2 = pd.DataFrame({\"Item Name\":item_name, \"Purchase Count\":purch_per_item, \"Average Purchase Price\":avg_per_item, \"Total Purchase Value\": total_per_item})\n",
+    "sn_summary2 = pd.DataFrame({\"Item Name\":item_name, \"Purchase Count\":purch_per_item, \"Item Price\":avg_per_item, \"Total Purchase Value\": total_per_item})\n",
     "\n",
     "sn_summary2.head()\n",
     "\n",
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 455,
    "metadata": {
     "scrolled": true
    },
@@ -1282,7 +1282,7 @@
        "      <th></th>\n",
        "      <th>Item Name</th>\n",
        "      <th>Purchase Count</th>\n",
-       "      <th>Average Purchase Price</th>\n",
+       "      <th>Item Price</th>\n",
        "      <th>Total Purchase Value</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1342,16 +1342,16 @@
        "145      (145, [Fiery Glass Crusader, Fiery Glass Crusa...               9   \n",
        "103      (103, [Singed Scalpel, Singed Scalpel, Singed ...               8   \n",
        "\n",
-       "         Average Purchase Price  Total Purchase Value  \n",
-       "Item ID                                                \n",
-       "92                     4.614615                 59.99  \n",
-       "178                    4.230000                 50.76  \n",
-       "82                     4.900000                 44.10  \n",
-       "145                    4.580000                 41.22  \n",
-       "103                    4.350000                 34.80  "
+       "         Item Price  Total Purchase Value  \n",
+       "Item ID                                    \n",
+       "92         4.614615                 59.99  \n",
+       "178        4.230000                 50.76  \n",
+       "82         4.900000                 44.10  \n",
+       "145        4.580000                 41.22  \n",
+       "103        4.350000                 34.80  "
       ]
      },
-     "execution_count": 449,
+     "execution_count": 455,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,7 +1396,7 @@
     "\n",
     "\n",
     "# Create a summary dataframe with multiple column containing the results from the previous calculation\n",
-    "sn_summary2 = pd.DataFrame({\"Item Name\":item_name, \"Purchase Count\":purch_per_item, \"Average Purchase Price\":avg_per_item, \"Total Purchase Value\": total_per_item})\n",
+    "sn_summary2 = pd.DataFrame({\"Item Name\":item_name, \"Purchase Count\":purch_per_item, \"Item Price\":avg_per_item, \"Total Purchase Value\": total_per_item})\n",
     "\n",
     "sn_summary2.head()\n",
     "\n",
