adding trends as csv file

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "0            576"
       ]
      },
-     "execution_count": 374,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "0                780.0        2379.77       3.050987                     179"
       ]
      },
-     "execution_count": 451,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "Other / Non-Disclosed            11               1.91"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,26 +327,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "* Run basic calculations to obtain purchase count, avg. purchase price, avg. purchase total per person etc. by gender\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "* Create a summary data frame to hold the results\n",
-    "\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
-    "\n",
-    "\n",
-    "* Display the summary data frame"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -373,9 +365,11 @@
        "      <th>Total Amount by Gender</th>\n",
        "      <th>Average Amount by Gender</th>\n",
        "      <th>Number of Purchases by Gender</th>\n",
+       "      <th>Avg Total Purchases per Person</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Gender</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -387,18 +381,21 @@
        "      <td>361.94</td>\n",
        "      <td>3.203009</td>\n",
        "      <td>113</td>\n",
+       "      <td>4.468395</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Male</th>\n",
        "      <td>1967.64</td>\n",
        "      <td>3.017853</td>\n",
        "      <td>652</td>\n",
+       "      <td>4.065372</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
        "      <td>50.19</td>\n",
        "      <td>3.346000</td>\n",
        "      <td>15</td>\n",
+       "      <td>4.562727</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -411,14 +408,20 @@
        "Male                                  1967.64                  3.017853   \n",
        "Other / Non-Disclosed                   50.19                  3.346000   \n",
        "\n",
-       "                       Number of Purchases by Gender  \n",
-       "Gender                                                \n",
-       "Female                                           113  \n",
-       "Male                                             652  \n",
-       "Other / Non-Disclosed                             15  "
+       "                       Number of Purchases by Gender  \\\n",
+       "Gender                                                 \n",
+       "Female                                           113   \n",
+       "Male                                             652   \n",
+       "Other / Non-Disclosed                             15   \n",
+       "\n",
+       "                       Avg Total Purchases per Person  \n",
+       "Gender                                                 \n",
+       "Female                                       4.468395  \n",
+       "Male                                         4.065372  \n",
+       "Other / Non-Disclosed                        4.562727  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,6 +431,18 @@
     "total_per_gender = purchase_data_df.groupby(\"Gender\")[\"Price\"].sum()\n",
     "\n",
     "\n",
+    "\n",
+    "#12 avg_per_sn = purchase_data_df.groupby(\"SN\")[\"Price\"].mean()\n",
+    "\n",
+    "avg_per_gender = purchase_data_df.groupby(\"Gender\")[\"Price\"].mean()\n",
+    "\n",
+    "new = purchase_data_df.groupby([\"SN\", \"Gender\"])[\"Price\"].sum()\n",
+    "#new.reset_index(inplace=True)\n",
+    "new = new.reset_index()\n",
+    "new\n",
+    "by_Gender = new.groupby(\"Gender\")[\"Price\"].mean()\n",
+    "by_Gender\n",
+    "\n",
     "#2. Average price of the item bought by the gender,\n",
     "avg_per_gender = purchase_data_df.groupby(\"Gender\")[\"Price\"].mean()\n",
     "\n",
@@ -436,7 +451,7 @@
     "\n",
     "\n",
     "\n",
-    "summary_info = {\"Total Amount by Gender\":total_per_gender, \"Average Amount by Gender\":avg_per_gender, \"Number of Purchases by Gender\":purch_per_gender}\n",
+    "summary_info = {\"Total Amount by Gender\":total_per_gender, \"Average Amount by Gender\":avg_per_gender, \"Number of Purchases by Gender\":purch_per_gender, \"Avg Total Purchases per Person\": by_Gender}\n",
     "summary_data = pd.DataFrame(summary_info)\n",
     "summary_data\n",
     "\n"
@@ -473,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +602,7 @@
        "50 to 54                 0            0.00"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +829,7 @@
        "45 to 49                   0.002951  "
       ]
      },
-     "execution_count": 397,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +998,7 @@
        "Iskadarya95               3                4.366667                 13.10"
       ]
      },
-     "execution_count": 411,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1185,7 @@
        "108        3.530000                 31.77  "
       ]
      },
-     "execution_count": 454,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -1351,7 +1366,7 @@
        "103        4.350000                 34.80  "
       ]
      },
-     "execution_count": 455,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
